--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/quill": "^2.0.9",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/react-redux": "^7.1.18",
+    "@types/redux-saga": "^0.10.5",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "quill": "^1.3.7",
@@ -23,14 +25,19 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "simple-react-validator": "^1.6.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
   "scripts": {
+    "generate": "node ./tools/generate.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -56,6 +63,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
-    "css-loader": "^6.2.0"
+    "@types/redux-logger": "^3.0.9",
+    "css-loader": "^6.2.0",
+    "generate-template-files": "^3.2.0"
   }
 }
